# condominio-reservas

./: pyproject.toml  requirements.txt
condominio_reservas/: admin.py  forms.py  models.py  views.py
condominio_reservas/migrations/: 0001_initial.py  0002_alter_administrador_statusconta_and_more.py
config/: settings.py  urls.py  views.py
config/STATIC_URL = 'static/: '
static/css/: estiloMorador.css  estiloSindico.css
templates/: base.html  home_admin.html  home_morador.html  home_sindico.html  login.html
