[project]
name = "condominio-reservas"
version = "0.1.0"
description = ""
authors = [
    {name = "LuiscffBRA",email = "luiscff2001@hotmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "django (==5.0.*)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "gunicorn (>=25.3.0,<26.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "tzdata (>=2025.3,<2026.0)",
    "sqlparse (>=0.5.5,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
